# taskManProj

./: CMakeLists.txt  README.md  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  libConnect.h  main.cpp
